# clackai-pdf-tool

./: FIRST-PRINCIPLES-RECONSTRUCTION.md  README.md  RECONSTRUCTION-PLAN.md  pyproject.toml  requirements.txt
pdf_tool/: ai.py  cli.py  parser.py
tests/: test_parser.py
