[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clackai-pdf-tool"
version = "0.1.0"
description = "Extract structured data from PDFs using AI"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "anthropic>=0.30.0",
    "click>=8.0.0",
]

[project.scripts]
pdf-tool = "pdf_tool.cli:cli"
